* ltmain.in: Remove the code for stripping duplicate deplibs from libtool link lines -- duplicates are somtimes necessary to satisfy inter-library dependencies, and never cause link to fail even if they are spurious. * tests/depdemo-dups.test: New file.  Make sure this bug doesn't creep back in again! * tests/Makefile.am (TESTS): Use the new test above.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -5,28 +5,29 @@ AUTOMAKE_OPTIONS = gnits
 TESTS = cdemo-static.test cdemo-make.test cdemo-exec.test \
 	demo-static.test demo-make.test demo-exec.test \
 	demo-inst.test demo-unst.test \
-	depdemo-static.test depdemo-make.test depdemo-exec.test \
-	depdemo-inst.test depdemo-unst.test \
+	depdemo-static.test depdemo-make.test depdemo-dups.test \
+	depdemo-exec.test depdemo-inst.test depdemo-unst.test \
 	mdemo-static.test mdemo-make.test mdemo-exec.test \
 	mdemo-inst.test mdemo-unst.test \
 	cdemo-conf.test cdemo-make.test cdemo-exec.test \
 	demo-conf.test demo-make.test demo-exec.test \
 	demo-inst.test demo-unst.test deplibs.test \
-	depdemo-conf.test depdemo-make.test depdemo-exec.test \
-	depdemo-inst.test depdemo-unst.test \
+	depdemo-conf.test depdemo-make.test depdemo-dups.test \
+	depdemo-exec.test depdemo-inst.test depdemo-unst.test \
 	mdemo-conf.test mdemo-make.test mdemo-exec.test \
 	mdemo-inst.test mdemo-unst.test dryrun.test \
 	demo-nofast.test demo-make.test demo-exec.test \
 	demo-inst.test demo-unst.test \
 	demo-pic.test demo-make.test demo-exec.test \
 	demo-nopic.test demo-make.test demo-exec.test \
-	depdemo-nofast.test depdemo-make.test depdemo-exec.test \
-	depdemo-inst.test depdemo-unst.test \
+	depdemo-nofast.test depdemo-make.test depdemo-dups.test \
+	depdemo-exec.test depdemo-inst.test depdemo-unst.test \
 	cdemo-shared.test cdemo-make.test cdemo-exec.test \
 	demo-shared.test demo-make.test demo-exec.test demo-inst.test \
 	hardcode.test build-relink.test noinst-link.test demo-unst.test \
-	depdemo-shared.test depdemo-make.test depdemo-exec.test \
-	depdemo-inst.test build-relink2.test depdemo-unst.test \
+	depdemo-shared.test depdemo-make.test depdemo-dups.test \
+	depdemo-exec.test depdemo-inst.test build-relink2.test \
+	depdemo-unst.test \
 	mdemo-shared.test mdemo-make.test mdemo-exec.test \
 	mdemo-inst.test mdemo-unst.test \
 	assign.test link.test link-2.test nomode.test \
