* libtool.m4: Fixed support for Darwin and Rhapsody. Now correctly hardcodes the library path and adds versioning. Other small fixes. * ltmain.in: Fixed special cases for libc and libm on Rhapsody and Darwin. One of them was misplaced. Added version_type case for Rhapsody and Darwin, named "darwin".

--- a/ltmain.in
+++ b/ltmain.in
@@ -1027,9 +1027,10 @@ compiler."
 	    # These systems don't actually have c library (as such)
 	    continue
 	    ;;
-	  *-*-rhapsody* | *-*-darwin*)
-	    # Darwin C library is in the System framework
+	  *-*-rhapsody* | *-*-darwin1.[012])
+	    # Rhapsody C library is in the System framework
 	    deplibs="$deplibs -framework System"
+	    continue
 	    ;;
 	  esac
 	elif test "$arg" = "-lm"; then
@@ -1038,9 +1039,10 @@ compiler."
 	    # These systems don't actually have math library (as such)
 	    continue
 	    ;;
-	  *-*-rhapsody* | *-*-darwin*)
-	    # Darwin math library is in the System framework
+	  *-*-rhapsody* | *-*-darwin1.[012])
+	    # Rhapsody math library is in the System framework
 	    deplibs="$deplibs -framework System"
+	    continue
 	    ;;
 	  esac
 	fi
@@ -1066,10 +1068,6 @@ compiler."
 	  $echo "$modename: warning: \`-no-install' is ignored for $host" 1>&2
 	  $echo "$modename: warning: assuming \`-no-fast-install' instead" 1>&2
 	  fast_install=no
-	  ;;
-        *-*-rhapsody* | *-*-darwin*)
-	  # Darwin C library is in the System framework
-	  deplibs="$deplibs -framework System"
 	  ;;
 	*)
 	  no_install=yes
@@ -2243,6 +2241,26 @@ compiler."
 	case $version_type in
 	none) ;;
 
+	darwin)
+	  # Like Linux, but with the current version available in
+	  # verstring for coding it into the library header
+	  major=.`expr $current - $age`
+	  versuffix="$major.$age.$revision"
+	  # Darwin ld doesn't like 0 for these options...
+	  minor_current=`expr $current + 1`
+	  verstring="-compatibility_version $minor_current -current_version $minor_current.$revision"
+	  ;;
+
+	freebsd-aout)
+	  major=".$current"
+	  versuffix=".$current.$revision";
+	  ;;
+
+	freebsd-elf)
+	  major=".$current"
+	  versuffix=".$current";
+	  ;;
+
 	irix)
 	  major=`expr $current - $age + 1`
 	  verstring="sgi$major.$revision"
@@ -2285,16 +2303,6 @@ compiler."
 	sunos)
 	  major=".$current"
 	  versuffix=".$current.$revision"
-	  ;;
-
-	freebsd-aout)
-	  major=".$current"
-	  versuffix=".$current.$revision";
-	  ;;
-
-	freebsd-elf)
-	  major=".$current"
-	  versuffix=".$current";
 	  ;;
 
 	windows)
@@ -2404,6 +2412,10 @@ compiler."
 	  *-*-cygwin* | *-*-mingw* | *-*-pw32* | *-*-os2* | *-*-beos*)
 	    # these systems don't actually have a c library (as such)!
 	    ;;
+	  *-*-rhapsody* | *-*-darwin1.[012])
+	    # Rhapsody C library is in the System framework
+	    deplibs="$deplibs -framework System"
+ 	    ;;
 	  *)
  	    # Add libc to deplibs on all other systems if necessary.
  	    if test $build_libtool_need_lc = "yes"; then
