--- a/ltmain.in
+++ b/ltmain.in
@@ -1205,9 +1205,10 @@ EOF
 	    # These systems don't actually have c library (as such)
 	    continue
 	    ;;
-	  *-*-rhapsody* | *-*-darwin*)
-	    # Darwin C library is in the System framework
+	  *-*-rhapsody* | *-*-darwin1.[012])
+	    # Rhapsody C library is in the System framework
 	    deplibs="$deplibs -framework System"
+	    continue
 	    ;;
 	  esac
 	elif test "$arg" = "-lm"; then
@@ -1216,9 +1217,10 @@ EOF
 	    # These systems don't actually have math library (as such)
 	    continue
 	    ;;
-	  *-*-rhapsody* | *-*-darwin*)
-	    # Darwin math library is in the System framework
+	  *-*-rhapsody* | *-*-darwin1.[012])
+	    # Rhapsody math library is in the System framework
 	    deplibs="$deplibs -framework System"
+	    continue
 	    ;;
 	  esac
 	fi
@@ -1244,10 +1246,6 @@ EOF
 	  $echo "$modename: warning: \`-no-install' is ignored for $host" 1>&2
 	  $echo "$modename: warning: assuming \`-no-fast-install' instead" 1>&2
 	  fast_install=no
-	  ;;
-	*-*-rhapsody* | *-*-darwin*)
-	  # Darwin C library is in the System framework
-	  deplibs="$deplibs -framework System"
 	  ;;
 	*)
 	  no_install=yes
@@ -2547,6 +2545,26 @@ EOF
 	case $version_type in
 	none) ;;
 
+	darwin)
+	  # Like Linux, but with the current version available in
+	  # verstring for coding it into the library header
+	  major=.`expr $current - $age`
+	  versuffix="$major.$age.$revision"
+	  # Darwin ld doesn't like 0 for these options...
+	  minor_current=`expr $current + 1`
+	  verstring="-compatibility_version $minor_current -current_version $minor_current.$revision"
+	  ;;
+
+	freebsd-aout)
+	  major=".$current"
+	  versuffix=".$current.$revision";
+	  ;;
+
+	freebsd-elf)
+	  major=".$current"
+	  versuffix=".$current";
+	  ;;
+
 	irix)
 	  major=`expr $current - $age + 1`
 	  verstring="sgi$major.$revision"
@@ -2589,16 +2607,6 @@ EOF
 	sunos)
 	  major=".$current"
 	  versuffix=".$current.$revision"
-	  ;;
-
-	freebsd-aout)
-	  major=".$current"
-	  versuffix=".$current.$revision";
-	  ;;
-
-	freebsd-elf)
-	  major=".$current"
-	  versuffix=".$current";
 	  ;;
 
 	windows)
@@ -2722,6 +2730,10 @@ EOF
 	  case $host in
 	  *-*-cygwin* | *-*-mingw* | *-*-pw32* | *-*-os2* | *-*-beos*)
 	    # these systems don't actually have a c library (as such)!
+	    ;;
+	  *-*-rhapsody* | *-*-darwin1.[012])
+	    # Rhapsody C library is in the System framework
+	    deplibs="$deplibs -framework System"
 	    ;;
 	  *)
  	    # Add libc to deplibs on all other systems if necessary.
