* tests/Makefile.am (TESTS): Delete references to depdemo-dups.test. * tests/depdemo-dups.test:  Removed, as part of the patch reversion below. * ltmain.in: Revert my change from 2001-03-31.  Although it was technically correct, it opens a whole can of worms we don't want to deal with right now.

--- a/ltmain.in
+++ b/ltmain.in
@@ -2062,7 +2062,26 @@ compiler."
 	  eval tmp_libs=\"\$$var\"
 	  new_libs=
 	  for deplib in $tmp_libs; do
-	    new_libs="$deplib $new_libs"
+	    # FIXME: Pedantically, this is the right thing to do, so
+	    #        that some nasty dependency loop isn't accidentally
+	    #        broken:
+	    #new_libs="$deplib $new_libs"
+	    # Pragmatically, this seems to cause very few problems in
+	    # practice:
+	    case $deplib in
+            -L*) new_libs="$deplib $new_libs" ;;
+            *)
+              case " $specialdeplibs " in
+              *" $deplib "*) new_libs="$deplib $new_libs" ;;
+              *)
+                case " $new_libs " in
+                *" $deplib "*) ;;
+                *) new_libs="$deplib $new_libs" ;;
+                esac
+                ;;
+              esac
+              ;;
+            esac
 	  done
 	  tmp_libs=
 	  for deplib in $new_libs; do
