From Peter Eisentraut  <peter_e@gmx.net> * ltmain.in (clean,uninstall): test -e is not portable.  Well, neither is -L, but I'm hoping that redirecting error messages to /dev/null and relying on non-zero exit status will work okay on the few hosts that don't support -L.

--- a/ltmain.in
+++ b/ltmain.in
@@ -4654,7 +4654,12 @@ relink_command=\"$relink_command\""
       fi
 
       # Don't error if the file doesn't exist and rm -f was used.
-      if test ! -e "$file" && test "$rmforce" = yes; then
+      if test -L "$file" >/dev/null 2>&1 || test -f "$file"; then
+        :
+      elif test -d "$file"; then
+        exit_status=1
+	continue
+      elif test "$rmforce" = yes; then
         continue
       fi
 
