* libtool.m4: Improve NetBSD support. * ltmain.in: ditto.

--- a/ltmain.in
+++ b/ltmain.in
@@ -1032,6 +1032,9 @@ compiler."
 	    deplibs="$deplibs -framework System"
 	    continue
 	    ;;
+          *-*-netbsd*)
+            # Don't link with libc until the a.out ld.so is fixed.
+            ;;
 	  esac
 	elif test "$arg" = "-lm"; then
 	  case $host in
