* doc/PLATFORMS:  With this patch, my Solaris boxes now pass the test suite,  Yay! From Albert Chin-A-Young <china@thewrittenword.com> * ltmain.in:  `test -L' is not portable, and infact breaks uninstall mode on Solaris.  Fallback to `test -h' and finally `test -f', but be careful not to let the failure status cause libtool to stop.

--- a/ltmain.in
+++ b/ltmain.in
@@ -4657,7 +4657,9 @@ relink_command=\"$relink_command\""
       fi
 
       # Don't error if the file doesn't exist and rm -f was used.
-      if test -L "$file" >/dev/null 2>&1 || test -f "$file"; then
+      if (test -L "$file") >/dev/null 2>&1 \
+        || (test -h "$file") >/dev/null 2>&1 \
+	|| test -f "$file"; then
         :
       elif test -d "$file"; then
         exit_status=1
