From Tim Mooney <mooney@dogbert.cc.ndsu.NoDak.edu> * tests/Makefile.am (TESTS_ENVIRONMENT): Make sure the *.test scripts get the same make that was used in the top level directory.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -45,9 +45,9 @@ LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 
 # Be sure to reexport important environment variables.
-TESTS_ENVIRONMENT = CC="$(CC)" CFLAGS="$(CFLAGS)" CPPFLAGS="$(CPPFLAGS)" \
-	LD="$(LD)" LDFLAGS="$(LDFLAGS)" LIBS="$(LIBS)" \
-	LN_S="$(LN_S)" NM="$(NM)" RANLIB="$(RANLIB)" \
+TESTS_ENVIRONMENT = MAKE="$(MAKE)" CC="$(CC)" CFLAGS="$(CFLAGS)" \
+	CPPFLAGS="$(CPPFLAGS)" LD="$(LD)" LDFLAGS="$(LDFLAGS)" \
+	LIBS="$(LIBS)" LN_S="$(LN_S)" NM="$(NM)" RANLIB="$(RANLIB)" \
 	OBJEXT="$(OBJEXT)" EXEEXT="$(EXEEXT)"
 
 EXTRA_DIST = defs $(TESTS)
