--- a/ltconfig.in
+++ b/ltconfig.in
@@ -988,6 +988,7 @@ aix3*)
   ;;
 
 aix4* | aix5*)
+  version_type=linux
   if test "$host_cpu" = ia64; then
     # AIX 5 supports IA64
     library_names_spec='${libname}${release}.so$versuffix ${libname}${release}.so$major $libname.so'
@@ -1006,7 +1007,7 @@ aix4* | aix5*)
       # We preserve .a as extension for shared libraries though AIX4.2
       # and later when we are not doing run time linking.
       library_names_spec='${libname}${release}.a $libname.a'
-      soname_spec='${libname}${release}.so$major.o'
+      soname_spec='${libname}${release}.so$major'
     fi
     # If we're using GNU nm, then we don't want the "-C" option.
     # -C means demangle to AIX nm, but means don't demangle with GNU nm
