--- a/configure.in
+++ b/configure.in
@@ -44,6 +44,14 @@ AC_LIBTOOL_WIN32_DLL
 AC_LIBTOOL_DLOPEN
 AC_PROG_LIBTOOL
 
+pushdef([AC_MSG_ERROR], [CXX=no])
+AC_PROG_CXX
+popdef([AC_MSG_ERROR])
+AM_CONDITIONAL(HAVE_CXX, [test "x$CXX" != xno])
+
+LT_AC_PROG_GCJ
+AM_CONDITIONAL(HAVE_GCJ, [test "x$GCJ" != xno])
+
 AC_ARG_ENABLE(ltdl-install,
 [  --disable-ltdl-install  do not install libltdl])
 if test x"${enable_ltdl_install+set}" != xset; then
@@ -54,7 +62,7 @@ AC_CONFIG_SUBDIRS(libltdl)
 
 # all subdirectories that are configured on demand, but that must be
 # included in the distribution
-CONF_SUBDIRS="cdemo demo depdemo mdemo"
+CONF_SUBDIRS="cdemo pdemo demo depdemo mdemo tagdemo"
 AC_SUBST(CONF_SUBDIRS)
 
 ACINCLUDE_M4_LIST="${srcdir}/acinclude.m4"
