--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,7 +2,13 @@
 
 AUTOMAKE_OPTIONS = gnits
 
-TESTS = cdemo-static.test cdemo-make.test cdemo-exec.test \
+CXX_TESTS = \
+	tagdemo-static.test tagdemo-make.test tagdemo-exec.test \
+	tagdemo-conf.test tagdemo-make.test tagdemo-exec.test \
+	tagdemo-shared.test tagdemo-make.test tagdemo-exec.test
+
+COMMON_TESTS = \
+	cdemo-static.test cdemo-make.test cdemo-exec.test \
 	demo-static.test demo-make.test demo-exec.test \
 	demo-inst.test demo-unst.test \
 	depdemo-static.test depdemo-make.test \
@@ -31,7 +37,14 @@ TESTS = cdemo-static.test cdemo-make.test cdemo-exec.test \
 	mdemo-shared.test mdemo-make.test mdemo-exec.test \
 	mdemo-inst.test mdemo-unst.test \
 	assign.test link.test link-2.test nomode.test \
-	quote.test sh.test suffix.test
+	quote.test sh.test suffix.test pdemo-conf.test \
+	pdemo-make.test pdemo-exec.test pdemo-inst.test
+
+if HAVE_CXX
+TESTS = $(COMMON_TESTS) $(CXX_TESTS)
+else
+TESTS = $(COMMON_TESTS)
+endif
 
 demo-conf.test: $(top_builddir)/libtool
 
@@ -50,12 +63,14 @@ TESTS_ENVIRONMENT = MAKE="$(MAKE)" CC="$(CC)" CFLAGS="$(CFLAGS)" \
 	LIBS="$(LIBS)" LN_S="$(LN_S)" NM="$(NM)" RANLIB="$(RANLIB)" \
 	OBJEXT="$(OBJEXT)" EXEEXT="$(EXEEXT)"
 
-EXTRA_DIST = defs $(TESTS)
+EXTRA_DIST = defs $(COMMON_TESTS) $(CXX_TESTS)
 
 # We need to remove any files that the above tests created.
 clean-local:
+	-test -f ../pdemo/Makefile && cd ../pdemo && $(MAKE) distclean
 	-test -f ../cdemo/Makefile && cd ../cdemo && $(MAKE) distclean
 	-test -f ../demo/Makefile && cd ../demo && $(MAKE) distclean
 	-test -f ../depdemo/Makefile && cd ../depdemo && $(MAKE) distclean
 	-test -f ../mdemo/Makefile && cd ../mdemo && $(MAKE) distclean
+	-test -f ../tagdemo/Makefile && cd ../tagdemo && $(MAKE) distclean
 	rm -rf _inst
