--- a/configure.in
+++ b/configure.in
@@ -31,18 +31,18 @@ AC_SUBST(aclocaldir)
 
 # Use the specified CC and LD
 AC_PROG_CC
+
+# Autoconf-2.13 AC_REQUIRE resolution confuses the ordering for the 
+# preprocessor test if left to figure this out for itself -- by forcing that
+# checks here, AC_REQUIRE doesn't need to add it.  When we upgrade to
+# Autoconf-2.50, this can be removed.
+AC_PROG_CPP
+
 AM_PROG_LD
 AC_SUBST(LD)
 AM_PROG_NM
 AC_SUBST(NM)
 AC_PROG_LN_S
-
-# Declare win32 dll support
-AC_LIBTOOL_WIN32_DLL
-
-# Check for dlopen support
-AC_LIBTOOL_DLOPEN
-AC_PROG_LIBTOOL
 
 pushdef([AC_MSG_ERROR], [CXX=no])
 AC_PROG_CXX
@@ -51,6 +51,20 @@ AM_CONDITIONAL(HAVE_CXX, [test "x$CXX" != xno])
 
 LT_AC_PROG_GCJ
 AM_CONDITIONAL(HAVE_GCJ, [test "x$GCJ" != xno])
+
+# Declare win32 dll support
+AC_LIBTOOL_WIN32_DLL
+
+# Autoconf-2.13 AC_REQUIRE resolution confuses the ordering for the cygwin
+# and mingw tests if left to figure this out for itself -- by forcing those
+# checks here, AC_REQUIRE doesn't need to add them.  When we upgrade to
+# Autoconf-2.50, this can be removed.
+AC_EXEEXT
+AC_OBJEXT
+
+# Check for dlopen support
+AC_LIBTOOL_DLOPEN
+AC_PROG_LIBTOOL
 
 AC_ARG_ENABLE(ltdl-install,
 [  --disable-ltdl-install  do not install libltdl])
